force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/Heuristic_Duplicate_Candidate__c.object-meta.xml
<CustomObject>
  <label>Heuristic Duplicate Candidate</label>
  <nameField>
    <displayFormat>HDC-{000000}</displayFormat>
    <label>Candidate Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Heuristic Duplicate Candidates</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>