force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Bucket_Key__c.field-meta.xml
<CustomField>
  <fullName>Bucket_Key__c</fullName>
  <label>Bucket Key</label>
  <length>255</length>
  <type>Text</type>
</CustomField>