force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/City__c.field-meta.xml
<CustomField>
  <fullName>City__c</fullName>
  <label>City</label>
  <length>120</length>
  <type>Text</type>
</CustomField>