force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/City_Normalized__c.field-meta.xml
<CustomField>
  <fullName>City_Normalized__c</fullName>
  <label>City Normalized</label>
  <length>120</length>
  <type>Text</type>
</CustomField>