force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Display_Value__c.field-meta.xml
<CustomField>
  <fullName>Display_Value__c</fullName>
  <label>Display Value</label>
  <length>255</length>
  <type>Text</type>
</CustomField>