force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Domain_Normalized__c.field-meta.xml
<CustomField>
  <fullName>Domain_Normalized__c</fullName>
  <label>Domain Normalized</label>
  <length>255</length>
  <type>Text</type>
</CustomField>