force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Email_Normalized__c.field-meta.xml
<CustomField>
  <fullName>Email_Normalized__c</fullName>
  <label>Email Normalized</label>
  <length>255</length>
  <type>Text</type>
</CustomField>