force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Name_Compact__c.field-meta.xml
<CustomField>
  <fullName>Name_Compact__c</fullName>
  <label>Name Compact</label>
  <length>255</length>
  <type>Text</type>
</CustomField>