force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Name_Normalized__c.field-meta.xml
<CustomField>
  <fullName>Name_Normalized__c</fullName>
  <label>Name Normalized</label>
  <length>255</length>
  <type>Text</type>
</CustomField>