force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Phone__c.field-meta.xml
<CustomField>
  <fullName>Phone__c</fullName>
  <label>Phone</label>
  <length>80</length>
  <type>Text</type>
</CustomField>