force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Phone_Normalized__c.field-meta.xml
<CustomField>
  <fullName>Phone_Normalized__c</fullName>
  <label>Phone Normalized</label>
  <length>40</length>
  <type>Text</type>
</CustomField>