force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Street_Normalized__c.field-meta.xml
<CustomField>
  <fullName>Street_Normalized__c</fullName>
  <label>Street Normalized</label>
  <length>255</length>
  <type>Text</type>
</CustomField>