force-app/main/default/objects/Heuristic_Duplicate_Candidate__c/fields/Website__c.field-meta.xml
<CustomField>
  <fullName>Website__c</fullName>
  <label>Website</label>
  <length>255</length>
  <type>Text</type>
</CustomField>